===============================================================================
2009-01-14: GenX 2b5.1
2008-12-11:
    Found a bug in the tof measurements for neutrons sigma and d had needed
    some truncation in order to get them working. Fixed.
    
2008-12-10:
    Fixed a bug that occured in my bugfix in the Reflectivty plugin from 
    2008-11-21, spotted by Gunnar. 
    Fixed bug in the optimizer saving routines, appeared only on windows and 
    mac...

2008-11-30:
    Changes to the Reflectivty plugin. It now tries to load an existing model
    when the plugin is loaded.
    The loaded plugins is also saved as the model is saved and are tried to
    be loded when the model loaded again. Also it is possible to define 
    default plugins in genx.conf.
    Found a bug in reflectivity plugin:
    The parameter section got many: "p = UserVars()" upon saving. Fixed

2008-11-28:
    Fixed the Key error given when shutting GenX down. Due to that the pool
    of workers where living in a thread. When removed from that thread the
    error disappeared.
    Added alot of error checking for loading and saving files. Should be almost
    idiot proof now.

2008-11-27:
    Added Ibkg to the interdiff model (not implemented previously)
    Added revival of the FOM vs generations plot after loading of data.
    Fixed bugs in the insertion of the layers.

2008-11-26:
    Added documentation to the plugins.
    Added documentation to the data loaders.
    Fixed export scritp+export table bug. When asked to overwrite the file
    the program asks about the gx file.
    Implemented autosaving every X generation. If wanted by the user, default
     off.
    Also added also atosave, errobar level, parallel processeing alternatives
    to the optimizer settings dialog box.
    
2008-11-23:
    Added procssing as an package in the about box. 
    Added code so that the fit state also is saved to the model. 

2008-11-22: 